src/app.css
html,
body {
  position: relative;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

body {
  color: #333;
  background: #f5f5f5;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
    'Helvetica Neue', sans-serif;
  line-height: 1.5em;
}

#svelte {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

#svelte main {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 10px;
  overflow: auto;
  box-sizing: border-box;
}

h1 {
  color: #ff3e00;
  text-transform: uppercase;
  font-size: 1.5em;
  font-weight: 100;
}

h2 {
  color: #4d4d4d;
  text-transform: uppercase;
  font-size: 1em;
  font-weight: 400;
}

a {
  color: #156fc5;
}

a:hover {
  color: #0f508d;
}

